# Aura-CrewAi

./: .clinerules  .gitignore  AGENTS.md  Procfile  README.md  pyproject.toml  railway.json
src/aura_crews/: __init__.py  main.py
src/aura_crews/config/: settings.py
src/aura_crews/crews/chat_crew/: crew.py
src/aura_crews/crews/chat_crew/config/: agents.yaml  tasks.yaml
src/aura_crews/crews/content_crew/: crew.py
src/aura_crews/crews/content_crew/config/: agents.yaml  tasks.yaml
src/aura_crews/crews/finance_crew/: crew.py
src/aura_crews/crews/finance_crew/config/: agents.yaml  tasks.yaml
src/aura_crews/crews/image_crew/: crew.py
src/aura_crews/crews/image_crew/config/: agents.yaml  tasks.yaml
src/aura_crews/crews/research_crew/: crew.py
src/aura_crews/crews/research_crew/config/: agents.yaml  tasks.yaml
src/aura_crews/flows/: aura_flow.py
src/aura_crews/guardrails/: hallucination.py
src/aura_crews/knowledge/: brand_guidelines.md  product_catalog.md
src/aura_crews/schemas/: models.py
src/aura_crews/skills/aura_personality/: SKILL.md
src/aura_crews/skills/content_writing/: SKILL.md
src/aura_crews/skills/sakluma_brand/: SKILL.md
src/aura_crews/tools/: custom_tools.py
tests/: test_crews.py
