[project]
name = "aura-v1-crews"
version = "7.0.0"
description = "AURA v7.0 Crews — CrewAI Multi-Agent Service by Matrol"
authors = [{ name = "Matrol", email = "khairulxshafiq@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.108.0,<2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aura_crews"]

[tool.crewai]
type = "flow"
